--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <link href="../images/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <link rel="stylesheet" href="styles.css">
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Play:wght@400;700&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Righteous=Play:wght@400;700&display=swap');
     </style>
   </head>
   <!-- <main>
